update case bug

--- a/code.ipynb
+++ b/code.ipynb
@@ -28,103 +28,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "from collections import defaultdict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Read words in to a dictionary\n",
-    "file = open('AFINN.txt')\n",
-    "word_dict = defaultdict(int)\n",
-    "for line in file.readlines():\n",
-    "    pair = line.rstrip().split(\"\\t\")\n",
-    "    word = pair[0]\n",
-    "    score = int(pair[1])\n",
-    "    word_dict[word] = score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "can't stand\ncashing in\ncool stuff\ndoes not work\ndont like\nfed up\ngreen wash\ngreen washing\nmessing up\nno fun\nnot good\nnot working\nright direction\nscrewed up\nsome kind\n"
-     ]
-    }
-   ],
-   "source": [
-    "for key in word_dict.keys():\n",
-    "    if len(key.split(' '))>1:\n",
-    "        print(key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "cover-up\nmade-up\nonce-in-a-lifetime\nself-confident\nself-deluded\nshort-sighted\nshort-sightedness\nson-of-a-bitch\n"
-     ]
-    }
-   ],
-   "source": [
+    "import re\n",
+    "from collections import defaultdict\n",
     "\n",
-    "for word in word_dict.keys():\n",
-    "    if '-' in word:\n",
-    "        print(word)"
-   ]
-  },
-  {
-   "source": [
+    "import timeit\n",
+    "\n",
+    "# Read words in to a dictionary\n",
+    "def read_words(filename):\n",
+    "    file = open(filename)\n",
+    "    word_dict = {}\n",
+    "    for line in file.readlines():\n",
+    "        pair = line.strip().split(\"\\t\")\n",
+    "        word_dict[pair[0]] = int(pair[1])\n",
+    "    \n",
+    "    # filter out the phrases with two or more words\n",
+    "    phrase_dict = defaultdict(int, {k: v for k, v in word_dict.items() if len(k.split())>1})\n",
+    "\n",
+    "    # keep the words has only one word\n",
+    "    word_dict = defaultdict(int, {k : word_dict[k] for k in set(word_dict) - set(phrase_dict)})\n",
+    "\n",
+    "    return (word_dict, phrase_dict)\n",
+    "\n",
+    "\n",
     "# Load melbGrid\n",
-    "location_list = [] # Store grid information\n",
-    "with open('melbGrid.json', 'r') as f:\n",
-    "    grid_dic = json.load(f)\n",
-    "    for location_dict in grid_dic['features']:\n",
-    "        location_list.append(location_dict['properties'])"
-   ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": 79,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "B2\n"
-     ]
-    }
-   ],
-   "source": [
+    "def load_grids(filename):\n",
+    "    location_list = [] # Store grid information\n",
+    "    with open(filename, 'r') as f:\n",
+    "        grid_dic = json.load(f)\n",
+    "        for location_dict in grid_dic['features']:\n",
+    "            location_list.append(location_dict['properties'])\n",
+    "    return location_list\n",
+    "\n",
+    "\n",
     "# Given coordinate and grid information return a location id\n",
     "def get_id(coordinate, location_list):\n",
     "    x = coordinate[0]\n",
@@ -134,127 +74,56 @@
     "            and y > location['ymin'] and y <= location['ymax']:\n",
     "            return location['id']\n",
     "    return False\n",
-    "print(get_id([145, -37.65], location_list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "('C2', \"I'm at @RivaStkilda in St Kilda, VIC https://t.co/kEbicNcmnP\")\n"
-     ]
-    }
-   ],
-   "source": [
+    "\n",
+    "\n",
     "# Load coordinate and text\n",
-    "twitter_list = [] # Only sotre tweet in the specified location\n",
-    "with open('smallTwitter.json', 'r', encoding = 'utf-8') as f:\n",
-    "    twitter_dic = json.load(f)\n",
+    "def load_twitter(filename):\n",
+    "    twitter_list = [] # Only store tweets in the specified location\n",
+    "    with open(filename, 'r', encoding = 'utf-8') as f:\n",
+    "        twitter_dic = json.load(f)\n",
     "\n",
-    "for row in twitter_dic['rows']:\n",
-    "    coordinate = row['value']['geometry']['coordinates']\n",
-    "    id = get_id(coordinate, location_list)\n",
-    "    if id:\n",
-    "        text = row['value']['properties']['text']\n",
-    "        twitter_list.append((id, text))\n",
-    "print(twitter_list[0])"
+    "    for row in twitter_dic['rows']:\n",
+    "        coordinate = row['value']['geometry']['coordinates']\n",
+    "        _id = get_id(coordinate, location_list)\n",
+    "        if _id:\n",
+    "            text = row['value']['properties']['text']\n",
+    "            twitter_list.append((_id, text))\n",
+    "    return twitter_list\n",
+    "\n",
+    "(word_dict, phrase_dict) = read_words('AFINN.txt')\n",
+    "location_list = load_grids('melbGrid.json')\n",
+    "twitter_list = load_twitter('smallTwitter.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Good guidance goOd! all you ide as people!\n['Good', 'goOd']\n"
+      "[\"can't stand\"]\nI for this #good things!? Not good so far,not good\n['Not good']\nI for this #good things!? Not good so far,not good\n['i', 'for', 'this', '#good', 'things', 'not', 'good', 'so', 'far,not', 'good']\n"
      ]
     }
    ],
    "source": [
-    "# Take a single word and a text as input, return multiple matches of the word in that text as a list. \n",
-    "import re\n",
-    "def allwords(word, text):\n",
-    "    text = re.sub(r'\\W\\b', ' ',text)\n",
-    "    print(text)\n",
-    "    return re.findall(r'\\b%s\\b' % word, text, re.I)\n",
-    "\n",
-    "print(allwords('good', \"Good guidance goOd! all you ide'as people!\"))\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# The whole text match\n",
-    "score_dict = {}\n",
-    "for location, text in twitter_list:\n",
-    "    for word in word_dict.keys():\n",
-    "        word_list = allwords(word, text)\n",
-    "        length = len(word_list)\n",
-    "        if length > 0:\n",
-    "            score = length * word_dict[word]\n",
-    "            if location in score_dict:\n",
-    "                score_dict[location] += score\n",
-    "            else:\n",
-    "                score_dict[location] = score\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "ha I'm not gooD not good naïve  I can't stand for hahahathis hard-working  #not Good once-in-a-liFetime \n['not gooD', 'not good', \"can't stand\", 'not Good']\n['ha', \"I'm\", '', '', '', '', 'naïve', '', 'I', '', '', 'for', 'hahahathis', 'hard-working', '', '#', '', 'once-in-a-liFetime', '']\n"
-     ]
-    }
-   ],
-   "source": [
-    "import re\n",
-    "t = \"ha I'm not gooD,not good naïve. I can't stand for hahahathis hard-working! #not Good once-in-a-liFetime.\"\n",
-    "pattern1 = re.compile(r'can\\'t stand|cashing in|cool stuff|does not work|dont like|fed up|green wash|green washing|messing up|no fun|not good\\b|not working|right direction|screwed up|some kind', re.I)\n",
-    "pattern2 = re.compile(r'can\\'t stand|cashing in|cool stuff|does not work|dont like|fed up|green wash|green washing|messing up|no fun|not good|not working|right direction|screwed up|some kind|[ !?.\\\"]|\\'\\W', re.I)\n",
-    "t1 = re.sub(r'\\b[!?.,\\\"]|\\'\\W', ' ',t)\n",
-    "print(t1)\n",
-    "print(pattern1.findall(t1))\n",
-    "print(pattern2.split(t1))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 85
-    }
-   ],
-   "source": [
-    "word_dict['naïve']"
+    "text = \"I can't stand for this #good things!? Not good so far,not good\"\n",
+    "# first check all the phrase (words with two or more words), and if occur, remove it from the text\n",
+    "for k,v in phrase_dict.items():\n",
+    "    # using regex to find all occurance of the phrase\n",
+    "    phrases = re.findall(r\"(?:\\s+|^)({}[!,?.'\\\"]*)(?=\\s+|$)\".format(k), text, re.I)\n",
+    "    if phrases:\n",
+    "        print(phrases)\n",
+    "        # remove the corresponding phrase from the twitter\n",
+    "        text = re.sub(r\"(?:\\s+|^)({}[!,?.'\\\"]*)(?=\\s+|$)\".format(k), \"\", text, flags = re.I)\n",
+    "        print(text)\n",
+    "        \n",
+    "# clean the unwanted data\n",
+    "word_list = [word.rstrip('!,?.\\'\\\"').lower() for word in text.split()]\n",
+    "print(word_list)\n",
+    "\n"
    ]
   }
  ]
