read json file line by line

--- a/code.ipynb
+++ b/code.ipynb
@@ -14,13 +14,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.6 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "0fa9fe373fd0ef5bc621353a7709c258fba38f84df00eab1f1d1ddb0afa1c3b8"
-    }
-   }
+   "name": "python386jvsc74a57bd00fa9fe373fd0ef5bc621353a7709c258fba38f84df00eab1f1d1ddb0afa1c3b8",
+   "display_name": "Python 3.8.6 64-bit"
   }
  },
  "nbformat": 4,
@@ -97,19 +92,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[\"can't stand\"]\nI for this #good things!? Not good so far,not good\n['Not good']\nI for this #good things!? Not good so far,not good\n['i', 'for', 'this', '#good', 'things', 'not', 'good', 'so', 'far,not', 'good']\n"
+      "['cool stuff']\nHappy \"love. I abandon easy/ easy does not work not Good‘ cool better!@  good@! pretty.nice Bad. BaD\n['does not work']\nHappy \"love. I abandon easy/ easy not Good‘ cool better!@  good@! pretty.nice Bad. BaD\n['happy', '\"love', 'i', 'abandon', 'easy/', 'easy', 'not', 'good‘', 'cool', 'better!@', 'good@', 'pretty.nice', 'bad', 'bad']\n"
      ]
     }
    ],
    "source": [
-    "text = \"I can't stand for this #good things!? Not good so far,not good\"\n",
+    "text = 'Happy \\\"love. I abandon easy/ easy does not work not Good‘ cool stuff cool better!@  good@! pretty.nice Bad. BaD'\n",
     "# first check all the phrase (words with two or more words), and if occur, remove it from the text\n",
     "for k,v in phrase_dict.items():\n",
     "    # using regex to find all occurance of the phrase\n",
